--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -3,10 +3,7 @@
 		<h1 id="user-intro">Introduction &amp; Background</h1>
 	</div>
 	<div class="content-rounded-panel">
-		<div id="introBlurb">
-			I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. <br/><br/>
-			I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
-		</div>
+		<div id="introBlurb">{{intro}}</div>
 		<br>
 	</div>
 </div>
